# learning_langchain

./: .gitignore  pyproject.toml
data/: readme.md  tsla-20250930.html
data/db/: chroma.sqlite3
data/processed/: tables.json  texts.json
output/: table_descriptions.json
src/: document_pipeline.py  storage.py  table_processor.py  utils.py
weekly_project/: step1.ipynb  step1_and_2.ipynb  step2.ipynb  step4.ipynb  step5.ipynb
weekly_project/chroma_db/02f54cab-f90f-46f1-a34b-ea565a604153/: index_metadata.pickle
weekly_project/faiss_db/: index.faiss  index.pkl
