[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.8.0",
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.3.0",
    "yfinance>=0.2.0",
]
